--- a/template copy.yaml
+++ b/template copy.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: 2010-09-09
 Transform:
-  - 'AWS::Serverless-2016-10-31'
+  - AWS::Serverless-2016-10-31
 Globals:
   Function:
     CodeUri: ./src
@@ -9,12 +9,12 @@ Globals:
     Timeout: 15
 Resources:
   SlackToken:
-    Type: 'AWS::SecretsManager::Secret'
+    Type: AWS::SecretsManager::Secret
     Properties:
-      Name: !Sub '${AWS::StackName}-slack-token'
+      Name: !Sub ${AWS::StackName}-slack-token
       SecretString: '{"token": "added manually"}'
   Table:
-    Type: 'AWS::DynamoDB::Table'
+    Type: AWS::DynamoDB::Table
     Properties:
       AttributeDefinitions:
         - AttributeName: PK
@@ -39,13 +39,13 @@ Resources:
       StreamSpecification:
         StreamViewType: NEW_AND_OLD_IMAGES
   SaveMatchScore:
-    Type: 'AWS::Serverless::Function'
+    Type: AWS::Serverless::Function
     Properties:
       Handler: functions/SaveMatchScore.handler
       Environment:
         Variables:
           TableName: !Ref Table
-          SlackToken: '{{resolve:secretsmanager:playhem-slack-token:SecretString:token}}'
+          SlackToken: "{{resolve:secretsmanager:playhem-slack-token:SecretString:token}}"
       Events:
         Submission:
           Type: EventBridgeRule
@@ -63,14 +63,14 @@ Resources:
     Metadata:
       BuildMethod: esbuild
   ShowScoreModal:
-    Type: 'AWS::Serverless::Function'
+    Type: AWS::Serverless::Function
     DependsOn:
       - SlackToken
     Properties:
       Handler: functions/ShowScoreModal.handler
       Environment:
         Variables:
-          SlackToken: '{{resolve:secretsmanager:playhem-slack-token:SecretString:token}}'
+          SlackToken: "{{resolve:secretsmanager:playhem-slack-token:SecretString:token}}"
       Events:
         NewScore:
           Type: EventBridgeRule
@@ -89,14 +89,14 @@ Resources:
     Metadata:
       BuildMethod: esbuild
   ShowLeaderboard:
-    Type: 'AWS::Serverless::Function'
+    Type: AWS::Serverless::Function
     DependsOn:
       - SlackToken
     Properties:
       Handler: functions/ShowLeaderboard.handler
       Environment:
         Variables:
-          SlackToken: '{{resolve:secretsmanager:playhem-slack-token:SecretString:token}}'
+          SlackToken: "{{resolve:secretsmanager:playhem-slack-token:SecretString:token}}"
           TableName: !Ref Table
       Events:
         NewScore:
@@ -119,7 +119,7 @@ Resources:
     Metadata:
       BuildMethod: esbuild
   WebhookReceiver:
-    Type: 'AWS::Serverless::Function'
+    Type: AWS::Serverless::Function
     Properties:
       Handler: functions/WebhookReceiver.handler
       Events:
@@ -134,15 +134,15 @@ Resources:
     Metadata:
       BuildMethod: esbuild
   EventBus:
-    Type: 'AWS::Events::EventBus'
+    Type: AWS::Events::EventBus
     Properties:
       Name: playhem
   PlayhemEventDiscoverer:
-    Type: 'AWS::EventSchemas::Discoverer'
+    Type: AWS::EventSchemas::Discoverer
     Properties:
       SourceArn: !GetAtt EventBus.Arn
   TableToEvent:
-    Type: 'AWS::Serverless::Function'
+    Type: AWS::Serverless::Function
     Properties:
       Handler: functions/TableToEvent.handler
       Runtime: nodejs14.x
@@ -162,13 +162,13 @@ Resources:
             - Sid: Statement1
               Effect: Allow
               Action:
-                - 'events:PutEvents'
+                - events:PutEvents
               Resource:
                 - !GetAtt EventBus.Arn
     Metadata:
       BuildMethod: esbuild
   CalculateRating:
-    Type: 'AWS::Serverless::Function'
+    Type: AWS::Serverless::Function
     Properties:
       CodeUri: src/
       Handler: functions/CalculateRating.handler
@@ -194,7 +194,7 @@ Resources:
     Metadata:
       BuildMethod: esbuild
   ShowMatchUpdate:
-    Type: 'AWS::Serverless::Function'
+    Type: AWS::Serverless::Function
     Properties:
       CodeUri: src/
       Handler: functions/ShowMatchUpdate.handler
@@ -202,7 +202,7 @@ Resources:
       Timeout: 10
       Environment:
         Variables:
-          SlackToken: '{{resolve:secretsmanager:playhem-slack-token:SecretString:token}}'
+          SlackToken: "{{resolve:secretsmanager:playhem-slack-token:SecretString:token}}"
       Events:
         DynamoDBEvent:
           Type: EventBridgeRule
@@ -217,7 +217,7 @@ Resources:
     Metadata:
       BuildMethod: esbuild
   RecordRatingMetric:
-    Type: 'AWS::Serverless::Function'
+    Type: AWS::Serverless::Function
     Properties:
       CodeUri: src/
       Handler: functions/RecordRatingMetric.handler
@@ -235,8 +235,7 @@ Resources:
               detail-type:
                 - USER
     Metadata:
-      BuildMethod: esbuild
-
+      BuildMethod: esbuild 
 Outputs:
   EndpointUrl:
-    Value: !Sub 'https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod'
+    Value: !Sub https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod
