--- a/src/package.json
+++ b/src/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@slack/web-api": "^6.7.0",
     "aws-embedded-metrics": "^2.0.4",
-    "simple-elo-rating": "^1.0.0"
+    "simple-elo-rating": "^1.0.0",
+    "uuidv4": "^6.2.13"
   }
 }
